--- a/frontend/src/components/UI/Modals/RecordModal/RecordModal.scss
+++ b/frontend/src/components/UI/Modals/RecordModal/RecordModal.scss
@@ -14,6 +14,20 @@
 }
 
 .consultation-modal {
+    &::-webkit-scrollbar {
+        width: 10px;
+        box-sizing: border-box;
+    }
+
+    &::-webkit-scrollbar-track {
+        background: $light-color;
+    }
+
+    &::-webkit-scrollbar-thumb {
+        background-color: #066E5A;
+        border-radius: 20px;
+    }
+
     position: relative;
     background-color: #08A88A;
     color: white;
@@ -62,14 +76,12 @@
 
     &__other-problem {
         margin-bottom: 20px;
-    }
 
-    &__label {
-        display: block;
-        margin-bottom: 8px;
-        font-size: 1.2rem;
-        font-weight: bold;
-        color: white;
+        p {
+            font-size: 1.3rem;
+            font-weight: bold;
+            margin-bottom: 10px;
+        }
     }
 
     &__textarea {
@@ -80,7 +92,7 @@
         resize: vertical;
         font-size: 1.1rem;
         box-sizing: border-box;
-        margin-bottom: 20px;
+        min-height: 100px;
 
         &:focus {
             outline: none;
@@ -128,6 +140,7 @@
             &__menu {
                 z-index: 1000 !important;
                 color: black;
+                text-align: left;
             }
 
             &__multi-value {
@@ -167,6 +180,7 @@
         border-radius: 6px;
         margin-bottom: 15px;
         border: 1px solid #ffcdd2;
+        text-align: center;
     }
 
     &__submit {
