--- a/frontend/src/features/account/TimeSlots/TimeSlots.scss
+++ b/frontend/src/features/account/TimeSlots/TimeSlots.scss
@@ -1,10 +1,18 @@
 @use "../../../assets/styles/variables.scss" as *;
 
 .time-slots {
-  margin-top: 16px;
   display: flex;
   flex-wrap: wrap;
   gap: 10px;
+  
+  &__container {
+    background-color: white;
+    border-radius: 10px;
+    padding: 20px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+  }
 
   &__list {
     display: grid;
@@ -17,6 +25,11 @@
     font-size: 1.3rem;
     font-weight: bold;
     text-align: center;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
   }
 
   &__item {
@@ -38,5 +51,10 @@
       background: $button-gradient;
       color: white;
     }
+  }
+
+  &__selected {
+    color: black;
+    text-align: center;
   }
 }
