--- a/frontend/src/assets/styles/pages.scss
+++ b/frontend/src/assets/styles/pages.scss
@@ -4,6 +4,7 @@
 @use "./pages/auth.scss";
 @use './pages/consultations.scss';
 @use './pages/usefulinfo.scss';
+@use './pages/bell.scss';
 
 .color-block {
   display: flex;
