--- a/frontend/src/components/UI/Schedule/Schedule.scss
+++ b/frontend/src/components/UI/Schedule/Schedule.scss
@@ -16,7 +16,8 @@
     }
 
     &__head {
-        background: #f5f5f5;
+        background: $primary-color;
+        color: white;
         position: sticky;
         top: 0;
         z-index: 2;
@@ -28,6 +29,10 @@
         text-align: center;
         font-weight: 600;
         white-space: nowrap;
+
+        &--today {
+            font-weight: bolder;
+        }
     }
 
     &__time {
@@ -36,6 +41,7 @@
         padding-right: 8px;
         font-size: 1.2rem;
         color: $gray-color;
+        background-color: white;
     }
 
     &__row {
@@ -50,11 +56,12 @@
         gap: 10px;
 
         button {
-            padding: 6px 10px;
-            border: 1px solid #ccc;
+            padding: 10px 12px;
             border-radius: 6px;
+            border: none;
             cursor: pointer;
-            background: #f9f9f9;
+            background: $primary-color;
+            color: white;
 
             &:disabled {
                 opacity: 0.5;
@@ -63,6 +70,12 @@
         }
     }
 
+    &__slot.highlight,
+    &__day.highlight,
+    &__row.highlight td {
+        background-color: rgba(100, 149, 237, 0.15);
+    }
+    
     &_week-label {
         font-weight: 600;
         font-size: 16px;
@@ -77,7 +90,7 @@
     &__slot {
         width: 80px;
         height: 40px;
-        border: 1px solid $gray-color;
+        border: 1px solid #949494;
         cursor: pointer;
         text-align: center;
         vertical-align: middle;
@@ -89,11 +102,11 @@
         }
 
         &--open {
-            background: #fff;
+            background: #fff !important;
         }
 
         &--booked {
-            background: #fff;
+            background: #fff !important;
 
             &::after {
                 content: "📌";
@@ -109,6 +122,10 @@
 
         &:hover {
             filter: brightness(0.95);
+        }
+
+        &--today {
+            background-color: rgba(178, 222, 236, 0.703);
         }
     }
 }
