--- a/frontend/src/assets/styles/pages/usefulinfo.scss
+++ b/frontend/src/assets/styles/pages/usefulinfo.scss
@@ -27,6 +27,7 @@
             font-size: 2rem;
             font-weight: bolder;
             margin-bottom: 20px;
+            text-align: left;
         }
 
         &__text {
