--- a/frontend/src/components/UI/Schedule/Schedule.scss
+++ b/frontend/src/components/UI/Schedule/Schedule.scss
@@ -33,6 +33,11 @@
         &--today {
             font-weight: bolder;
         }
+
+        &.highlight {
+            background-color: #ffcc00 !important;
+            color: #000;
+        }
     }
 
     &__time {
@@ -42,6 +47,11 @@
         font-size: 1.2rem;
         color: $gray-color;
         background-color: white;
+
+        &.highlight {
+            background-color: #ffcc00 !important;
+            color: #000;
+        }
     }
 
     &__row {
@@ -70,12 +80,6 @@
         }
     }
 
-    &__slot.highlight,
-    &__day.highlight,
-    &__row.highlight td {
-        background-color: rgba(100, 149, 237, 0.15);
-    }
-    
     &_week-label {
         font-weight: 600;
         font-size: 16px;
@@ -126,6 +130,13 @@
 
         &--today {
             background-color: rgba(178, 222, 236, 0.703);
+        }
+
+        &--past {
+            background-color: black !important;
+            color: #999;
+            cursor: not-allowed;
+            opacity: 0.6;
         }
     }
 }
