--- a/frontend/src/features/account/RightPanel/RightPanel.scss
+++ b/frontend/src/features/account/RightPanel/RightPanel.scss
@@ -8,31 +8,54 @@
     padding: 20px;
     border-radius: 10px;
     border-top: 10px solid $primary-color;
-    
+
     display: flex;
     flex-direction: column;
     align-items: center;
     gap: 10px;
-    
+
     background-color: $sidebar-color;
     z-index: 1000;
-    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-
-    img {
-        width: 100%;
-    }
 }
 
-// Адаптивность для мобильных устройств
-@media (max-width: 768px) {
-    .rightPanel {
-        position: static;
-        width: auto;
-        margin: 10px 0;
-        flex-direction: row;
+// SVG-иконки на сайте
+.svg-link {
+    position: relative;
+    display: inline-block;
+
+    & .notification-badge {
+        position: absolute;
+        top: -5px;
+        right: -5px;
+        width: 30px;
+        height: 30px;
+        box-sizing: border-box;
+        background-color: red;
+        color: white;
+        font-size: 1.2rem;
+        font-weight: bolder;
+        border-radius: 50%;
+        display: flex;
+        align-items: center;
         justify-content: center;
-        
-        // Если нужно скрыть на мобильных
-        // display: none;
+        box-shadow: 0 0 2px rgba(0, 0, 0, 0.5);
+        z-index: 10000;
+    }
+
+    & .icon {
+        transition: all 0.3s ease;
+    }
+
+    &.active {
+        fill: $doctor-color;
+    }
+
+    &:hover {
+        filter: none;
+
+        .icon {
+            fill: $primary-color;
+            cursor: pointer;
+        }
     }
 }
