--- a/frontend/src/assets/styles/pages/bell.scss
+++ b/frontend/src/assets/styles/pages/bell.scss
@@ -1,7 +1,6 @@
 @use '../variables.scss' as *;
 
 .notifications {
-    max-width: 720px;
     margin: 0 auto;
     padding: 24px;
 
@@ -16,6 +15,30 @@
         display: flex;
         flex-direction: column;
         gap: 16px;
+    }
+
+    &__buttons {
+        display: flex;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        gap: 20px;
+        margin-bottom: 2rem;
+
+        button {
+            border: 1px solid $gray-color;
+            border-radius: 10px;
+            padding: 0.5rem 2rem;
+            background-color: white;
+            color: black;
+            cursor: pointer;
+
+
+            &:hover {
+                color: $gray-color;
+                border-color: $primary-color;
+            }
+        }
     }
 }
 
