--- a/frontend/src/components/UI/Modals/RecordModal/RecordModal.scss
+++ b/frontend/src/components/UI/Modals/RecordModal/RecordModal.scss
@@ -76,13 +76,19 @@
 
     &__other-problem {
         margin-bottom: 20px;
+    }
 
-        p {
-            font-size: 1.3rem;
-            font-weight: bold;
-            margin-bottom: 10px;
+    &__description {
+        font-size: 1.3rem;
+        margin-left: 10px;
+        margin-right: 10px;
+        text-align: justify;
+
+        &-flag {
+            color: yellow !important;
         }
     }
+
 
     &__textarea {
         width: 100%;
