--- a/frontend/src/components/UI/Schedule/Schedule.scss
+++ b/frontend/src/components/UI/Schedule/Schedule.scss
@@ -80,9 +80,9 @@
         }
     }
 
-    &_week-label {
+    &__week-label {
         font-weight: 600;
-        font-size: 16px;
+        font-size: 1.4rem;
     }
 
     &__today-btn {
