--- a/frontend/src/components/UI/Modals/CancelModal/CancelModal.scss
+++ b/frontend/src/components/UI/Modals/CancelModal/CancelModal.scss
@@ -1,10 +1,14 @@
 @use '../../../../assets/styles/variables.scss' as *;
 
 .cancel-modal {
+    padding: 2rem 5rem;
+    max-width: 800px;
+    box-sizing: border-box;
+
     &__notification {
         text-align: center;
         margin: 20px auto;
-        font-size: 1.2rem;
+        font-size: 1.45rem;
     }
 
     &__reason {
