--- a/frontend/src/components/UI/Modals/RecordModal/RecordModal.scss
+++ b/frontend/src/components/UI/Modals/RecordModal/RecordModal.scss
@@ -1,18 +1,5 @@
 @use '../../../../assets/styles/variables.scss' as *;
 
-.modal {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.5);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    z-index: 1000;
-}
-
 .consultation-modal {
     &::-webkit-scrollbar {
         width: 10px;
@@ -41,7 +28,7 @@
 
     &__title {
         font-size: 2rem;
-        font-weight: boder;
+        font-weight: bolder;
         margin: 0;
         color: white;
         text-align: center;
