--- a/frontend/src/assets/styles/pages/bell.scss
+++ b/frontend/src/assets/styles/pages/bell.scss
@@ -52,6 +52,19 @@
     background-color: #fff;
     transition: background-color 0.2s ease, border-left 0.2s ease;
 
+    &__header {
+        font-size: 1.45rem;
+        font-weight: 600;
+        text-align: left;
+        margin-bottom: 0;
+    }
+
+    &__message {
+        margin-top: 8px;
+        font-size: 1rem;
+        color: $gray-color;
+    }
+
     &--unread {
         border-left: 4px solid #3b82f6;
         background-color: #ffffff;
@@ -74,11 +87,6 @@
         font-size: 18px;
         font-weight: 600;
         margin-bottom: 4px;
-    }
-
-    &__message {
-        font-size: 14px;
-        color: #4b5563;
     }
 
     &__button {
