--- a/frontend/src/features/account/ArchiveConsultations/ArchiveConsultations.scss
+++ b/frontend/src/features/account/ArchiveConsultations/ArchiveConsultations.scss
@@ -2,7 +2,7 @@
 
 .archive-consultations {
   padding: 2rem 1rem;
-  margin: 0 auto;
+  margin: 10px auto;
   background-color: $profile-color;
   border-radius: 10px;
 
