--- a/frontend/src/pages/account/admin/EditUsefulInformations/EditUsefulInformations.scss
+++ b/frontend/src/pages/account/admin/EditUsefulInformations/EditUsefulInformations.scss
@@ -128,7 +128,8 @@
   }
 }
 
-.problems-list {
+// Список проблем и список специализаций
+.lists {
   display: flex;
   flex-direction: column;
   gap: 10px;
@@ -180,22 +181,4 @@
     align-items: center;
     gap: 20px;
   }
-
-  &__error {
-    margin-top: 8px;
-    color: $red-color;
-    font-size: 1.5rem;
-    font-weight: bold;
-    background: #f8d7da;
-    border: 1px solid #f5c2c7;
-    padding: 6px 10px;
-    border-radius: 6px;
-    opacity: 1;
-    transition: opacity 1s ease-out;
-
-    &.fade-out {
-      opacity: 0;
-    }
-  }
-
 }
