--- a/frontend/src/assets/styles/variables.scss
+++ b/frontend/src/assets/styles/variables.scss
@@ -4,6 +4,7 @@ $shadow-color: rgba(0,0,0,0.08);
 
 $content-color: rgb(217, 217, 217);
 $gray-color: rgb(74, 85, 104);
+$gray-color-hover: rgb(53, 59, 69);
 
 $light-color: rgb(240, 248, 255);
 $light-color-hover: rgb(221, 230, 237);
