--- a/frontend/src/features/account/DoctorInfo/DoctorInfo.scss
+++ b/frontend/src/features/account/DoctorInfo/DoctorInfo.scss
@@ -2,7 +2,7 @@
 
 .doctor-info {
     width: 100%;
-    min-height: calc(100% + 25vh);
+    min-height: calc(100% + 20vh);
     margin: 1rem auto;
     padding: 1rem 2rem;
     border-radius: 10px;
@@ -17,7 +17,7 @@
     }
 
     &__title {
-        font-size: 2rem;
+        font-size: 2.4rem;
         font-weight: bolder;
         color: white;
         margin-bottom: 0;
@@ -29,20 +29,9 @@
         color: white;
     }
 
-    &__content {
-        margin-bottom: 32px;
-    }
-
-    &__actions {
-        display: flex;
-        justify-content: center;
-    }
-
     &__select {
-        width: 90%;
+        width: 100%;
         box-sizing: border-box;
-        margin-top: 20px;
-        margin-bottom: 20px;
 
         .custom-select {
             &__control {
@@ -78,6 +67,56 @@
             }
         }
     }
+
+    &__flex-column {
+        display: flex;
+        flex-direction: column;
+        gap: 20px;
+    }
+
+    &__add {
+        padding: 20px;
+        background-color: $profile-color;
+        border-radius: 10px;
+
+        &-button {
+            background: #27ae60;
+            color: white;
+            border: none;
+            padding: 0.9rem 1.2rem;
+            border-radius: 10px;
+            cursor: pointer;
+            font-size: 1.3rem;
+
+            &:hover {
+                background: #229954;
+            }
+        }
+
+        &-title {
+            font-size: 1.8rem;
+            font-weight: bolder;
+            text-align: center;
+            color: black;
+            margin-bottom: 0;
+        }
+    }
+
+    &__input {
+        margin: 0 !important;
+    }
+
+    &__buttons {
+        display: flex;
+        gap: 20px;
+        justify-content: center;
+        align-items: center;
+    }
+
+    &__button {
+        width: 100%;
+        margin: 0 !important;
+    }
 }
 
 .info-section {
@@ -95,22 +134,11 @@
         border-bottom: 1px solid #b1b1b1;
     }
 
-    &__icon {
-        font-size: 2.2rem;
-        margin-right: 12px;
-    }
-
     &__title {
-        font-size: 1.5rem;
+        font-size: 2rem;
         font-weight: bold;
-        color: $gray-color;
+        color: black;
         margin: 0;
-    }
-
-    &__content {
-        display: flex;
-        flex-direction: column;
-        gap: 16px;
     }
 }
 
@@ -121,14 +149,15 @@
     padding: 12px 0;
 
     &__label {
-        font-weight: 600;
+        font-size: 1.5rem;
+        font-weight: bolder;
         color: $gray-color;
         min-width: 120px;
     }
 
     &__value {
         color: $gray-color;
-        font-weight: bolder;
+        font-weight: bold;
         font-size: 1.4rem;
     }
 }
@@ -177,20 +206,6 @@
     }
 }
 
-.add-button {
-    background: #27ae60;
-    color: white;
-    border: none;
-    padding: 0.9rem 1.2rem;
-    border-radius: 10px;
-    cursor: pointer;
-    font-size: 1.3rem;
-
-    &:hover {
-        background: #229954;
-    }
-}
-
 .specialization-form {
     background-color: $nav-color;
     border-radius: 8px;
@@ -209,9 +224,4 @@
             color: black;
         }
     }
-}
-
-.action-buttons {
-    display: flex;
-    gap: 12px;
 }
