--- a/frontend/src/pages/account/admin/EditUsefulInformations/EditUsefulInformations.scss
+++ b/frontend/src/pages/account/admin/EditUsefulInformations/EditUsefulInformations.scss
@@ -158,6 +158,10 @@
     }
   }
 
+  &__search {
+    margin-bottom: 0 !important;
+  }
+
   &__button {
     background-color: $button-color;
     border: none;
