--- a/frontend/src/assets/styles/pages/account.scss
+++ b/frontend/src/assets/styles/pages/account.scss
@@ -132,6 +132,46 @@
     }
   }
 
+  &__comment-cell {
+    max-width: 250px;
+    cursor: pointer;
+
+    .comment-text {
+      display: inline-block;
+      white-space: nowrap;
+      overflow: hidden;
+      max-width: 100%;
+      color: black;
+      text-overflow: ellipsis;
+    }
+  }
+
+  &__filter-tabs {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+    margin: 15px 0;
+
+    .tab-btn {
+      padding: 0.7rem 1.1rem;
+      border: none;
+      background: #f5f5f5;
+      cursor: pointer;
+      border-radius: 6px;
+      transition: 0.2s;
+
+      &.active {
+        background-color: $primary-color;
+        color: white;
+      }
+
+      &:hover:not(.active) {
+        background: #e9e9e9;
+      }
+    }
+  }
+
   .image-preview {
     position: fixed;
     z-index: 1000;
@@ -402,7 +442,7 @@
       }
     }
   }
-  
+
   &__archives {
     display: grid;
     grid-template-columns: 1fr 1fr;
@@ -410,8 +450,8 @@
     margin-bottom: 20px;
 
     & .consultation-card {
-        max-width: 100% !important;
-        margin: 0 !important;
+      max-width: 100% !important;
+      margin: 0 !important;
     }
   }
 }
@@ -726,14 +766,6 @@
     color: #333;
   }
 
-  &__table-wrapper {
-    width: 100%;
-    overflow-x: auto;
-    border: 1px solid #e0e0e0;
-    border-radius: 8px;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-  }
-
   &__row-blocked {
     background-color: #e7972f !important;
     color: white;
@@ -762,6 +794,14 @@
   &__table {
     width: 100%;
 
+    &-wrapper {
+      width: 100%;
+      overflow-x: auto;
+      border: 1px solid #e0e0e0;
+      border-radius: 8px;
+      box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    }
+
     &-head {
       background-color: #f5f5f5;
     }
@@ -786,6 +826,10 @@
       text-align: left;
       border-bottom: 1px solid #e0e0e0;
       white-space: nowrap;
+    }
+
+    &-fio {
+      text-align: left;
     }
   }
 }
