--- a/frontend/src/features/home/Contacts/Contacts.scss
+++ b/frontend/src/features/home/Contacts/Contacts.scss
@@ -19,6 +19,13 @@
 
     &__info {
         font-size: 1.6rem;
+
+        &__edit {
+            margin-top: 10px;
+            border: none;
+            border-radius: 10px;
+            padding: 0.8rem 1.2rem;
+        }
     }
 
     &__socials {
@@ -40,5 +47,10 @@
                 }
             }
         }
+    }
+
+    &__message {
+        font-size: 1.8rem;
+        color: green;
     }
 }
