--- a/frontend/src/components/UI/ShowError/ShowError.scss
+++ b/frontend/src/components/UI/ShowError/ShowError.scss
@@ -20,5 +20,7 @@
     
     &__message {
         color: green !important;
+        background: #d7f8dc;
+        border: 1px solid #6e9374;
     }
 }
