--- a/frontend/src/features/home/Contacts/Contacts.scss
+++ b/frontend/src/features/home/Contacts/Contacts.scss
@@ -26,6 +26,11 @@
             border-radius: 10px;
             padding: 0.8rem 1.2rem;
         }
+
+        &__button {
+            margin-top: 10px !important;
+            width: 100% !important;
+        }
     }
 
     &__socials {
