--- a/frontend/src/components/UI/Tabs/Tabs.scss
+++ b/frontend/src/components/UI/Tabs/Tabs.scss
@@ -19,11 +19,15 @@
         border-radius: 10px;
         transition: 0.2s;
         font-family: inherit;
-        font-size: inherit;
+        font-size: 1.5rem;
 
         &--active {
-            background-color: $primary-color;
+            background-color: $button-color;
             color: white;
+
+            &:hover {
+                background-color: $button-color-hover !important;
+            }
         }
 
         &:hover:not(.filter-tabs__tab--active) {
