--- a/frontend/src/pages/account/admin/MakeConsultation/MakeConsultation.scss
+++ b/frontend/src/pages/account/admin/MakeConsultation/MakeConsultation.scss
@@ -87,5 +87,6 @@
 }
 
 .other-problem {
-  background-color: rgb(217, 217, 8) !important;
+  color: black;
+  background-color: $secondary-color !important;
 }
