--- a/frontend/src/components/UI/ShowError/ShowError.scss
+++ b/frontend/src/components/UI/ShowError/ShowError.scss
@@ -12,6 +12,7 @@
         border-radius: 6px;
         opacity: 1;
         transition: opacity 1s ease-out;
+        margin-bottom: 20px;
 
         &.fade-out {
             opacity: 0;
