--- a/frontend/src/components/UI/LoaderUsefulInfo/LoaderUsefulInfo.scss
+++ b/frontend/src/components/UI/LoaderUsefulInfo/LoaderUsefulInfo.scss
@@ -1,79 +1,79 @@
-.loading-spinner-container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    padding: 40px;
-    min-height: 200px;
-}
+@use '../../../assets/styles/variables.scss' as *;
 
-.loading-spinner {
+.loading-spinner-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding: 40px;
+  min-height: 200px;
+
+  .loading-spinner {
     display: inline-block;
     position: relative;
     width: 100px;
     height: 20px;
+    background: none;
+
+    .spinner-circle {
+      position: absolute;
+      top: 0;
+      width: 20px;
+      height: 20px;
+      border-radius: 50%;
+      animation-timing-function: cubic-bezier(0, 1, 1, 0);
+
+      &:nth-child(1) {
+        left: 8px;
+        animation: loading-spinner1 0.6s infinite;
+      }
+
+      &:nth-child(2) {
+        left: 8px;
+        animation: loading-spinner2 0.6s infinite;
+      }
+
+      &:nth-child(3) {
+        left: 32px;
+        animation: loading-spinner2 0.6s infinite;
+      }
+
+      &:nth-child(4) {
+        left: 56px;
+        animation: loading-spinner3 0.6s infinite;
+      }
+    }
+  }
+
+  .loading-text {
+    font-size: 1.5rem;
+  }
 }
 
-.spinner-circle {
-    position: absolute;
-    top: 0;
-    width: 20px;
-    height: 20px;
-    border-radius: 50%;
-    background: #3b82f6;
-    animation-timing-function: cubic-bezier(0, 1, 1, 0);
-}
-
-.spinner-circle:nth-child(1) {
-    left: 8px;
-    animation: loading-spinner1 0.6s infinite;
-}
-
-.spinner-circle:nth-child(2) {
-    left: 8px;
-    animation: loading-spinner2 0.6s infinite;
-}
-
-.spinner-circle:nth-child(3) {
-    left: 32px;
-    animation: loading-spinner2 0.6s infinite;
-}
-
-.spinner-circle:nth-child(4) {
-    left: 56px;
-    animation: loading-spinner3 0.6s infinite;
-}
-
+// keyframes лучше вынести отдельно
 @keyframes loading-spinner1 {
-    0% {
-        transform: scale(0);
-    }
-
-    100% {
-        transform: scale(1);
-    }
+  0% {
+    transform: scale(0);
+  }
+  100% {
+    transform: scale(1);
+  }
 }
 
 @keyframes loading-spinner3 {
-    0% {
-        transform: scale(1);
-    }
-
-    100% {
-        transform: scale(0);
-    }
+  0% {
+    transform: scale(1);
+  }
+  100% {
+    transform: scale(0);
+  }
 }
 
 @keyframes loading-spinner2 {
-    0% {
-        transform: translate(0, 0);
-    }
-
-    100% {
-        transform: translate(24px, 0);
-    }
-}
-
-.loading-text {
-    font-size: 1.5rem;
+  0% {
+    transform: translate(0, 0);
+  }
+  100% {
+    transform: translate(24px, 0);
+  }
 }
