--- a/frontend/src/components/UI/Modals/RecordModal/RecordModal.scss
+++ b/frontend/src/components/UI/Modals/RecordModal/RecordModal.scss
@@ -1,6 +1,17 @@
 @use '../../../../assets/styles/variables.scss' as *;
 
 .consultation-modal {
+    position: relative;
+    background-color: #08A88A;
+    color: white;
+    padding: 30px;
+    border-radius: 12px;
+    max-width: 800px;
+    width: 90%;
+    max-height: 90vh;
+    overflow-y: auto;
+    box-shadow: 0 4px 20px rgba(0, 0, 0, 0.15);
+
     &::-webkit-scrollbar {
         width: 10px;
         box-sizing: border-box;
@@ -14,17 +25,6 @@
         background-color: #066E5A;
         border-radius: 20px;
     }
-
-    position: relative;
-    background-color: #08A88A;
-    color: white;
-    padding: 30px;
-    border-radius: 12px;
-    max-width: 800px;
-    width: 90%;
-    max-height: 90vh;
-    overflow-y: auto;
-    box-shadow: 0 4px 20px rgba(0, 0, 0, 0.15);
 
     &__title {
         font-size: 2rem;
@@ -74,6 +74,11 @@
         &-flag {
             color: yellow !important;
         }
+    }
+
+    &__label {
+        font-size: 1.3rem;
+        margin-bottom: 10px;
     }
 
 
@@ -178,6 +183,7 @@
 
     &__submit {
         background-color: #066E5A;
+        margin-top: 20px;
         padding: 0.8rem 2rem;
         width: 100%;
         color: white;
