--- a/frontend/src/components/UI/Modals/ShiftModal/ShiftModal.scss
+++ b/frontend/src/components/UI/Modals/ShiftModal/ShiftModal.scss
@@ -17,6 +17,10 @@
         border-radius: 20px;
         background-color: #F2EFDB;
         margin: 2dvb auto;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        gap: 10px;
 
         p {
             color: #17325e;
@@ -24,6 +28,10 @@
             font-weight: bolder;
             text-align: center;
             margin: 0;
+        }
+
+        button {
+            width: 300px;
         }
     }
 
