--- a/frontend/src/pages/auth/FormAuth/FormAuth.scss
+++ b/frontend/src/pages/auth/FormAuth/FormAuth.scss
@@ -22,7 +22,7 @@
   &__error {
     margin: 0 !important;
     text-align: center;
-    font-size: 1rem;
+    font-size: 1rem !important;
   }
 
   &__toggle-button {
